@@ -61,6 +61,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #14741: Fix missing support for Ellipsis ('...') in parser module.
+
 - Issue #14697: Fix missing support for set displays and set comprehensions in
   parser module.
 
